--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
                 console.log('new Message: ' + msg);
                 $('#messages').append($('<li>').text(msg));
             });
+            socket.on('cert data', function(msg){
+                console.log('received cert data: ' + msg);
+                var data = jQuery.parseJSON(msg);
+                $('#messages').append($('<li>').text(data.name + " : " + data.value));
 
+            });
             socket.on('Done', function (data){
             });
 
