restructure framework dependencies.
Bootstrap and jQuery are now loaded with and from nodejs so this site will work without internet connection. Also extracted css and js code from html files into the assets folder for reuse on other pages.

--- a/index.html
+++ b/index.html
@@ -1,83 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>x509 Cert Check</title>
-    <style>
-
-        #messages {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        #messages li {
-            padding: 5px 10px;
-        }
-
-        #messages li:nth-child(odd) {
-            background: #eee;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/custom/x509check.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.css">
+    <script src="/assets/jquery/jquery.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-        var socket = io();
-        var SelectedFile;
-        var FReader;
-        var Name;
-
-        $(function () {
-
-            socket.on('MoreData', function (data){
-                console.log(data['Percent']);
-                var Place = data['Place'] * 524288; //Next Blocks Starting Pos
-                var NewFile; //hold the new Block
-                if(SelectedFile.webkitSlice)
-                    NewFile = SelectedFile.webkitSlice(Place, Place + Math.min(524288, (SelectedFile.size-Place)));
-                else
-                    NewFile = SelectedFile.slice(Place, Place + Math.min(524288, (SelectedFile.size-Place)));
-                FReader.readAsBinaryString(NewFile);
-            });
-
-            socket.on('chat message', function(msg){
-                console.log('new Message: ' + msg);
-                $('#messages').append($('<li>').text(msg));
-            });
-            socket.on('cert data', function(msg){
-                console.log('received cert data: ' + msg);
-                var data = jQuery.parseJSON(msg);
-                $('#messages').append($('<li>').text(data.name + " : " + data.value));
-
-            });
-            socket.on('Done', function (data){
-            });
-
-            $('form').submit(function () {
-                socket.emit('chat message', $('#m').val());
-                $('#m').val('');
-                return false;
-            });
-
-            $( "#UploadButton" ).click(function() {
-                if($('#FileBox').prop("files").length > 0)
-                {
-                    SelectedFile = $('#FileBox').prop("files")[0];
-                    FReader = new FileReader();
-                    var Content = "<span id='NameArea'>Uploading " + SelectedFile.name + "</span>";
-                   $('#UploadArea').html(Content);
-                    FReader.onload = function(evnt){
-                        socket.emit('Upload', {Name: SelectedFile.name, Data : evnt.target.result });
-                    }
-                    socket.emit('Start', {Name: SelectedFile.name, 'Size' : SelectedFile.size });
-                }
-                else
-                {
-                    alert("Please Select A File");
-                }
-            });
-        });
-    </script>
-
+    <script src="/assets/custom/x509checkGUI.js"></script>
 </head>
 <body>
 <div id="UploadBox">
@@ -87,7 +18,6 @@
             <button type='button' id='UploadButton' class='Button'>Upload</button>
         </span>
 </div>
-
 <ul id="messages"></ul>
 </body>
 </html>
