--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <div class="row">
         <div class="col s12 hidden" id="CertBox">
             <h2>Certificate Data</h2>
+            <a class="btn btn-default" href="/" role="button" alt="Button back to upload site.">Upload another cert</a>
             <h3>Log</h3>
             <div id="messages"></div>
             <h3>Details</h3>
             <div id="certDetails"></div>
+
         </div>
     </div>
 </div>
