Allow .cert and .crt filenames.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col s12 m6 offset-m3" id="UploadBox">
             <h2>x509 Cert Upload</h2>
             <span id='UploadArea'>
-            <label for="FileBox">Choose A File: </label><input type="file"  accept=".cert" id="FileBox"><br>
+            <label for="FileBox">Choose A File: </label><input type="file"  accept=".crt,.cert" id="FileBox"><br>
             <button type='button' id='UploadButton' class='Button'>Upload</button>
         </span>
         </div>
