--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
     <div class="row">
         <div class="col s12 m6 offset-m3" id="UploadBox">
             <h2>x509 Cert Upload</h2>
+            <div class="form-group">
+                <label for="FileBox">File input</label>
+                <input type="file" accept=".cert,.cer,.crt,.pem" id="FileBox">
+                <p class="help-block">Please select a x509 certificate that is Base64 or DER encoded.</p>
+            </div>
             <span id='UploadArea'>
-            <label for="FileBox">Choose A File: </label><input type="file"  accept=".crt,.cert" id="FileBox"><br>
-            <button type='button' id='UploadButton' class='Button'>Upload</button>
-        </span>
+                <button type='button' id='UploadButton' class='btn btn-normal'>Upload</button>
+            </span>
         </div>
     </div>
     <div class="row">
